@@ -16,6 +16,8 @@ Changes in version 0.2.0.19-alpha - 2008-0?-??
       0.1.2.x.
     - Stop incorrectly truncating zlib responses to directory authority
       signature download requests.  Fix for bug 593.  Bugfix on 0.2.0.x.
+    - Don't trigger an assert if we start a directory authority with a
+      private IP address (like 127.0.0.1).
 
 
 Changes in version 0.2.0.18-alpha - 2008-01-25
